--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Web application for sharing course materials.
+Web application for sharing course materials. Uses web.py and bootstrap.
 
 Work in progress.
